--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset = "utf-8">
 <body>
-	<div id = "myRect" style = 'width:100px;height:100px;background:red;transition:100 1s"'></div>
+	<div id = "myRect" style = 'width:100px;height:100px;background:red;transition: all 100 1s"'></div>
 	<input type = "range" id = "myPicker" min = "100" max="500">
 	<script>
 		myPicker.onchange = function(){
